# speeches_analisys

./: .gitmodules  README.md  pyproject.toml  requirements.pip  setup.py
speeches_analisys/: __init__.py  load.py  metrics.py
speeches_analisys/extract_keywords/: __init__.py
speeches_analisys/extract_keywords/process/: embedd_processer.py  net_processer.py
speeches_analisys/extract_topics/: __init__.py
speeches_analisys/extract_topics/models/: __init__.py  base_extractor.py  bow_lda.py  tfidf_pbg.py
speeches_analisys/extract_topics/process/: __init__.py  processer.py
speeches_analisys/preprocess/: preprocess.py
speeches_analisys/speeches_scrap/: __init__.py
speeches_analisys/speeches_scrap/models/: __init__.py  baseModel.py  base_model.py  deputado.py  discurso.py  faseEvento.py  fase_evento.py  partido.py
speeches_analisys/speeches_scrap/scrap_discursos/: __init__.py  deputados.py  discursos.py  partidos.py  save.py
speeches_analisys/topic_comparison/: __init__.py  comparer.py  model.py
speeches_analisys/word_cloud/: __init__.py  cloud.py
src/extract_keywords/process/: net_processer.py
src/extract_topics/: __init__.py
src/extract_topics/models/: base_extractor.py  bow_lda.py
src/extract_topics/process/: processer.py
src/speeches_analysis/: __init__.py
src/speeches_analysis/models/: __init__.py  deputado.py  discurso.py  faseEvento.py  partido.py
src/speeches_analysis/scrap_discursos/: deputados.py  discursos.py  partidos.py  save.py  scrap_discursos.py
src/speeches_scrap/: __init__.py
src/speeches_scrap/models/: __init__.py  (+2 more)
(+14 files in other folders)
